Update Rnnlm build files, store epoch and state for Rnnlm to continue after interruption. Store epoch for Nmt to continue after interruption.

--- a/tensorflow/models/rnn/ptb/BUILD
+++ b/tensorflow/models/rnn/ptb/BUILD
@@ -14,10 +14,23 @@ py_library(
     ],
     srcs_version = "PY2AND3",
     deps = [
-	":ptb_word_lm"
+	":ptb_word_lm",
+	":rnnlm",
         ":reader",
 	"//tensorflow/models/rnn/ptb/utils:train_utils",
         "//tensorflow/models/rnn/ptb/utils:model_utils",
+    ],
+)
+
+py_library(
+    name = "rnnlm",
+    srcs = ["rnnlm.py"],
+    srcs_version = "PY2AND3",
+    deps = [
+	"//tensorflow/models/rnn",
+        "//tensorflow/models/rnn:rnn_cell",
+        "//tensorflow/models/rnn:seq2seq",
+	"//tensorflow:tensorflow_py"
     ],
 )
 
@@ -49,10 +62,7 @@ py_binary(
         ":reader",
 	"//tensorflow/models/rnn/ptb/utils:model_utils",
 	"//tensorflow/models/rnn/ptb/utils:train_utils",
-        "//tensorflow:tensorflow_py",
-        "//tensorflow/models/rnn",
-        "//tensorflow/models/rnn:rnn_cell",
-        "//tensorflow/models/rnn:seq2seq",
+        "//tensorflow:tensorflow_py"
     ],
 )
 
